# TwitchEventSub-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
TwitchEventSub-Godot/: Cargo.toml
TwitchEventSub-Godot/src/: lib.rs
TwitchEventSub-Godot/src/modules/: adbreak.rs  cheer.rs  emote.rs  follow.rs  getchatters.rs  messages.rs  mod.rs  poll.rs  raid.rs  redeems.rs  subscription.rs
TwitchEventSub-Unity/: Cargo.toml
TwitchEventSub-Unity/src/: lib.rs
examples/: chat_messages.rs
examples/Bevy/GuiWithEmotes/: Cargo.toml  loading.rs  main.rs
examples/Bevy/Simple/: Cargo.toml  main.rs
examples/Bevy/Simple/src/: main.rs
examples/Godot/: README.md
examples/Godot/godot/: JumpScare.gd  icon.svg.import  node_2d.gdshader  node_2d.tscn  project.godot  twitchapi.gdextension
examples/Godot/rust/: .gitignore  Cargo.toml
examples/Godot/rust/src/: lib.rs
examples/Godot_SimpleChatExample/: SimpleChat.tscn  chat.gd  label_tween.gd  project.godot  twitchapi.gdextension
examples/TwitchAuthOnly/: Cargo.toml
examples/TwitchAuthOnly/src/: main.rs
examples/TwitchEventSubGodot/: .example.env  project.godot  twitch_events_example.tscn  twitchapi.gdextension
examples/Unity/rust_unity/: Cargo.toml
examples/Unity/rust_unity/src/: lib.rs
src/: lib.rs
src/modules/: apitypes.rs  consts.rs  errors.rs  eventsub.rs  generic_message.rs  irc_bot.rs  messages.rs  mod.rs  subscriptions.rs  token.rs  twitch_http.rs
twitcheventsub/: Cargo.toml
twitcheventsub-api/: Cargo.toml
twitcheventsub-api/src/: lib.rs  request.rs
twitcheventsub-godot/: .rustfmt.toml  Cargo.toml  twitchapi.gdextension
twitcheventsub-godot/.cargo/: config.toml
twitcheventsub-godot/src/: lib.rs
twitcheventsub-godot/src/modules/: adbreak.rs  badges.rs  banned.rs  cheer.rs  emote.rs  follow.rs  getchatters.rs  messages.rs  mod.rs  poll.rs  prediction.rs  raid.rs  redeems.rs  subscription.rs
twitcheventsub-structs/: Cargo.toml  LICENSE  README.md
twitcheventsub-structs/src/: api_structs.rs  api_types.rs  eventsub_structs.rs  lib.rs  response_messages.rs  solid_structs.rs  subscriptions.rs
twitcheventsub-tokens/: Cargo.toml
twitcheventsub-tokens/src/: builder.rs  custom_redeems.rs  env_handler.rs  lib.rs
twitcheventsub-unity/: Cargo.toml
twitcheventsub-unity/src/: TwitchEvents.cs  TwitchEventsFFI.cs  lib.rs
twitcheventsub/examples/TwitchEventSubGodot/: DoStuffOnEvents.gd  icon.svg.import  project.godot
twitcheventsub/src/: lib.rs
twitcheventsub/src/modules/: apitypes.rs  bevy.rs  bttv.rs  consts.rs  emotebuilder.rs  errors.rs  eventsub.rs  irc_bot.rs  mod.rs  token.rs  twitch_http.rs
