[package]
name = "twitch_eventsub"
version = "0.1.2"
edition = "2021"
description = "A library that handles everything with Twitch EventSub helix api for you."
repository = "https://github.com/lilith645/TwitchEventSub-rs.git"
authors = ["Owlkaline"]
categories = [
  "api-bindings",
  "web-programming::websocket",
  "authentication",
  "network-programming",
]
keywords = ["Twitch", "EventSub", "oauth", "api", "Godot"]
resolver = "2"
license = "MIT"
exclude = ["examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
only_raw_responses = []
#godot = ["dep:godot"]
bevy = ["twitch_eventsub_structs/bevy"]

[dependencies]
enum_all_variants = "0.2.0"
curl = "0.4.46"
open = "5.1.4"
simple_env_load = "0.2.0"
log = "0.4"
attohttpc = "0.28.0"
tungstenite = { version = "0.24.0", features = ["native-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
#twitch_eventsub_structs = "0.1.2"
twitch_eventsub_structs = { git = "https://github.com/Owlkaline/TwitchEventSubStructs.git" }
