[workspace]
members = [
  "twitcheventsub",
  "twitcheventsub-godot",
  "twitcheventsub-unity",
  "twitcheventsub-structs",
]
default-members = ["twitcheventsub"]
resolver = "2"

[workspace.package]
edition = "2021"
description = "A library that handles everything with Twitch EventSub helix api for you."
repository = "https://github.com/lilith645/TwitchEventSub-rs.git"
authors = ["Owlkaline <owlkaline@inet-sys.com>"]
categories = [
  "api-bindings",
  "web-programming::websocket",
  "authentication",
  "network-programming",
]
keywords = ["Twitch", "EventSub", "oauth", "api", "Godot"]
license = "MIT"
exclude = ["examples"]

[workspace.dependencies]
tungstenite = "0.24.0"
enum_all_variants = "0.2.0"
curl = "0.4.46"
open = "5.1.4"
simple_env_load = "0.2.0"
log = "0.4"
attohttpc = "0.28.0"
serde = "1.0.210"
serde_json = "1.0.128"
serde_with = "3.8.3"
godot = "0.1.3"
image = "0.25.2"
rand = "0.8.5"

[workspace.dependencies.twitcheventsub]
version = "0.1"
path = "twitcheventsub"

[workspace.dependencies.twitcheventsub-godot]
version = "0.1"
path = "twitcheventsub-godot"

[workspace.dependencies.twitcheventsub-unity]
version = "0.1"
path = "twitcheventsub-unity"

[workspace.dependencies.twitcheventsub-structs]
version = "0.1"
path = "twitcheventsub-structs"
