[workspace]
members = [
  "twitcheventsub",
  "twitcheventsub-godot",
  #"twitcheventsub-unity",
  "twitcheventsub-structs",
  "twitcheventsub-tokens",
  "twitcheventsub-api",
]
default-members = ["twitcheventsub"]
resolver = "2"

[workspace.package]
edition = "2021"
description = "A library that handles everything with Twitch EventSub helix api for you."
repository = "https://github.com/lilith645/TwitchEventSub-rs.git"
authors = ["Owlkaline <owlkaline@inet-sys.com>"]
categories = [
  "api-bindings",
  "web-programming::websocket",
  "authentication",
  "network-programming",
]
keywords = ["Twitch", "EventSub", "oauth", "api", "Godot"]
license = "MIT"
exclude = ["examples"]

[workspace.dependencies]
tungstenite = "0.26.0"
enum_all_variants = "0.2.0"
curl = "0.4.47"
open = "5.3.2"
simple_env_load = "0.2.0"
log = "0.4"
attohttpc = "0.29.2"
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.12.0"
godot = "0.2.4"
image = "0.25.6"
rand = "0.9.1"

[workspace.dependencies.twitcheventsub]
version = "0.1.5"
path = "twitcheventsub"

[workspace.dependencies.twitcheventsub-godot]
version = "0.1.5"
path = "twitcheventsub-godot"

#[workspace.dependencies.twitcheventsub-unity]
#version = "0.1.5"
#path = "twitcheventsub-unity"

[workspace.dependencies.twitcheventsub-structs]
version = "0.1.5"
path = "twitcheventsub-structs"

[workspace.dependencies.twitcheventsub-tokens]
version = "0.1.5"
path = "twitcheventsub-tokens"

[workspace.dependencies.twitcheventsub-api]
version = "0.1.5"
path = "twitcheventsub-api"
