[package]
name = "twitchevents_godot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#godot = "0.1.1"
twitch_eventsub = { path = "../../../Git/TwitchEventSub-rs/" }
image = "*"
#twitch_eventsub = { git = "https://github.com/lilith645/TwitchEventSub-rs.git" }

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["experimental-wasm", "lazy-function-tables"]
