[package]
name = "rust_unity"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_unity"
crate-type = ["dylib"]

[dependencies]
rand = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
#twitch_eventsub = { git = "https://github.com/lilith645/TwitchEventSub-rs.git" }
twitch_eventsub = { path = "../" }
