[package]
name = "twitchevents-godot"
version = "0.1.5"
edition = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
description = "The bindings to be able to have easy twitch intergration with godot made in rust using the twitcheventsub library"

[lib]
crate-type = ["cdylib"]

[dependencies]
image.workspace = true
serde = { workspace = true, features = ["derive"] }
twitcheventsub = { workspace = true, features = ["logging"] }
godot.workspace = true
log = "0.4"
simple-logging = "2.0.2"

#[dependencies.godot]
#git = "https://github.com/godot-rust/gdext"
#branch = "master"
#features = ["experimental-wasm", "lazy-function-tables"]
