[package]
name = "twitchevents-godot"
version = "0.1.4"
edition = { workspace = true }
categories = ["api-bindings", "authentication"]
keywords = ["twitch", "godot"]
license = { workspace = true }
description = "The bindings to be able to have easy twitch intergration with godot made in rust using the twitcheventsub library."

[lib]
crate-type = ["cdylib"]

[dependencies]
image.workspace = true
serde = { workspace = true, features = ["derive"] }
twitcheventsub = { workspace = true }
godot.workspace = true
log = "0.4"
simple-logging = "2.0.2"
