[package]
name = "twitcheventsub-godot"
version = "0.1.5"
edition = { workspace = true }
categories = ["api-bindings", "authentication"]
keywords = ["twitch", "godot"]
license = { workspace = true }
description = "The bindings to be able to have easy twitch intergration with godot made in rust using the twitcheventsub library."
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
image.workspace = true
serde = { workspace = true, features = ["derive"] }
twitcheventsub = { workspace = true }
godot.workspace = true
log.workspace = true
simple-logging = "2.0.2"
