[package]
name = "twitcheventsub-structs"
version = "0.1.5"
authors = ["Owlkaline"]
description = "Defined Struct types for of all the twitch eventsub responses easy Serialise/Deserialie"
repository = "https://github.com/Owlkaline/TwitchEventSubStructs"
categories = ["api-bindings", "web-programming", "network-programming"]
keywords = ["Twitch", "api", "EventSub", "Structs"]
resolver = "2"
edition = { workspace = true }
license = { workspace = true }

[features]
bevy = ["dep:bevy_ecs"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
bevy_ecs = { version = "0.16", optional = true }
