[package]
name = "twitcheventsub"
version = "0.1.4"
edition = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
authors.workspace = true
repository.workspace = true
description.workspace = true
exlude = ["examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["logging"]
only_raw_responses = []
#godot = ["dep:godot"]
bevy = ["twitcheventsub-structs/bevy"]
logging = ["dep:log"]

[dependencies]
log = { workspace = true, optional = true }
tungstenite = { workspace = true, features = ["native-tls"] }
enum_all_variants.workspace = true
curl.workspace = true
open.workspace = true
simple_env_load.workspace = true
attohttpc.workspace = true
serde.workspace = true
serde_json.workspace = true
twitcheventsub-structs.workspace = true
