[package]
name = "twitcheventsub"
version = "0.1.5"
edition = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
authors.workspace = true
repository.workspace = true
description.workspace = true
exclude = ["examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["logging"]
only_raw_responses = []
#godot = ["dep:godot"]
bevy = ["dep:bevy_app", "dep:bevy_time", "dep:bevy_derive", "dep:bevy_state", "dep:bevy_ecs", "twitcheventsub-tokens/bevy", "twitcheventsub-structs/bevy"]
logging = ["dep:log"]

[dependencies]
log = { workspace = true, optional = true }
tungstenite = { workspace = true, features = ["native-tls"] }
enum_all_variants.workspace = true
curl.workspace = true
open.workspace = true
simple_env_load.workspace = true
attohttpc.workspace = true
serde.workspace = true
serde_json.workspace = true
twitcheventsub-structs.workspace = true
twitcheventsub-tokens.workspace = true
twitcheventsub-api.workspace = true
serde_with.workspace = true
bevy_ecs = { version="0.18.0", optional = true }
bevy_state = { version="0.18.0", optional = true }
bevy_derive = { version="0.18.0", optional = true }
bevy_time = { version="0.18.0", optional = true }
bevy_app = { version="0.18.0", optional = true }

[[example]]
name = "chat_messages"
path = "../examples/chat_messages.rs"
doc-scrape-examples = true

[package.metadata.example.chat_messages]
name = "Chat Messages"
description = "Illustrates recieving and sending chat messages"
category = "Api"
